FIXED. THE FUCKING. API CALL. AND THE DATABASE STUFF. WHOO!